; ModuleID = '/home/carl/AnghaBench/nginx/src/os/win32/extr_ngx_alloc.c_ngx_alloc.c'
source_filename = "/home/carl/AnghaBench/nginx/src/os/win32/extr_ngx_alloc.c_ngx_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_LOG_EMERG = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"malloc(%uz) failed\00", align 1
@NGX_LOG_DEBUG_ALLOC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"malloc: %p:%uz\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ngx_alloc(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i8* @malloc(i64 %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i32, i32* @NGX_LOG_EMERG, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @ngx_errno, align 4
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @ngx_log_error(i32 %11, i32* %12, i32 %13, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %14)
  br label %16

16:                                               ; preds = %10, %2
  %17 = load i32, i32* @NGX_LOG_DEBUG_ALLOC, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @ngx_log_debug2(i32 %17, i32* %18, i32 0, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %19, i64 %20)
  %22 = load i8*, i8** %5, align 8
  ret i8* %22
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @ngx_log_error(i32, i32*, i32, i8*, i64) #1

declare dso_local i32 @ngx_log_debug2(i32, i32*, i32, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
